gramatica.output
Terminals unused in grammar

   PUNTOCOMA


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: asignacion_statement
    5          | si_statement
    6          | mientras_statement

    7 asignacion_statement: TEXT IGUAL exp

    8 si_statement: SI LPAREN condicion_list RPAREN statement_list osi_list FIN
    9             | SI LPAREN condicion_list RPAREN statement_list FIN

   10 osi_list: osi
   11         | osi_list osi

   12 osi: OSI LPAREN condicion_list RPAREN statement_list

   13 mientras_statement: MIENTRAS LPAREN condicion_list RPAREN statement_list FIN

   14 condicion_list: condicion_list DOBLEAMPERSAN condicion
   15               | condicion_list DOBLEBARRA condicion
   16               | EXCLAMACION condicion
   17               | condicion

   18 condicion: exp MAYQUE exp
   19          | exp MENQUE exp
   20          | exp MAYQUE IGUAL exp
   21          | exp MENQUE IGUAL exp
   22          | exp IGUAL IGUAL exp

   23 exp: exp MAS term
   24    | exp MENOS term
   25    | exp CONCAT term
   26    | term

   27 term: term POR factor
   28     | term DIV factor
   29     | factor

   30 factor: ENT
   31       | MENOS ENT
   32       | REAL
   33       | MENOS REAL
   34       | LPAREN exp RPAREN
   35       | COMILLA TEXT COMILLA


Terminals, with rules where they appear

$end (0) 0
error (256)
MAS (258) 23
MENOS (259) 24 31 33
POR (260) 27
DIV (261) 28
LPAREN (262) 8 9 12 13 34
RPAREN (263) 8 9 12 13 34
CONCAT (264) 25
COMILLA (265) 35
IGUAL (266) 7 20 21 22
SI (267) 8 9
OSI (268) 12
MIENTRAS (269) 13
FIN (270) 8 9 13
DOBLEAMPERSAN (271) 14
DOBLEBARRA (272) 15
EXCLAMACION (273) 16
MAYQUE (274) 18 20
MENQUE (275) 19 21
PUNTOCOMA (276)
ENT (277) 30 31
REAL (278) 32 33
TEXT (279) 7 35


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
program (26)
    on left: 1, on right: 0
statement_list (27)
    on left: 2 3, on right: 1 3 8 9 12 13
statement (28)
    on left: 4 5 6, on right: 2 3
asignacion_statement (29)
    on left: 7, on right: 4
si_statement (30)
    on left: 8 9, on right: 5
osi_list (31)
    on left: 10 11, on right: 8 11
osi (32)
    on left: 12, on right: 10 11
mientras_statement (33)
    on left: 13, on right: 6
condicion_list (34)
    on left: 14 15 16 17, on right: 8 9 12 13 14 15
condicion (35)
    on left: 18 19 20 21 22, on right: 14 15 16 17
exp (36)
    on left: 23 24 25 26, on right: 7 18 19 20 21 22 23 24 25 34
term (37)
    on left: 27 28 29, on right: 23 24 25 26 27 28
factor (38)
    on left: 30 31 32 33 34 35, on right: 27 28 29


state 0

    0 $accept: . program $end

    SI        shift, and go to state 1
    MIENTRAS  shift, and go to state 2
    TEXT      shift, and go to state 3

    program               go to state 4
    statement_list        go to state 5
    statement             go to state 6
    asignacion_statement  go to state 7
    si_statement          go to state 8
    mientras_statement    go to state 9


state 1

    8 si_statement: SI . LPAREN condicion_list RPAREN statement_list osi_list FIN
    9             | SI . LPAREN condicion_list RPAREN statement_list FIN

    LPAREN  shift, and go to state 10


state 2

   13 mientras_statement: MIENTRAS . LPAREN condicion_list RPAREN statement_list FIN

    LPAREN  shift, and go to state 11


state 3

    7 asignacion_statement: TEXT . IGUAL exp

    IGUAL  shift, and go to state 12


state 4

    0 $accept: program . $end

    $end  shift, and go to state 13


state 5

    1 program: statement_list .
    3 statement_list: statement_list . statement

    SI        shift, and go to state 1
    MIENTRAS  shift, and go to state 2
    TEXT      shift, and go to state 3

    $default  reduce using rule 1 (program)

    statement             go to state 14
    asignacion_statement  go to state 7
    si_statement          go to state 8
    mientras_statement    go to state 9


state 6

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


state 7

    4 statement: asignacion_statement .

    $default  reduce using rule 4 (statement)


state 8

    5 statement: si_statement .

    $default  reduce using rule 5 (statement)


state 9

    6 statement: mientras_statement .

    $default  reduce using rule 6 (statement)


state 10

    8 si_statement: SI LPAREN . condicion_list RPAREN statement_list osi_list FIN
    9             | SI LPAREN . condicion_list RPAREN statement_list FIN

    MENOS        shift, and go to state 15
    LPAREN       shift, and go to state 16
    COMILLA      shift, and go to state 17
    EXCLAMACION  shift, and go to state 18
    ENT          shift, and go to state 19
    REAL         shift, and go to state 20

    condicion_list  go to state 21
    condicion       go to state 22
    exp             go to state 23
    term            go to state 24
    factor          go to state 25


state 11

   13 mientras_statement: MIENTRAS LPAREN . condicion_list RPAREN statement_list FIN

    MENOS        shift, and go to state 15
    LPAREN       shift, and go to state 16
    COMILLA      shift, and go to state 17
    EXCLAMACION  shift, and go to state 18
    ENT          shift, and go to state 19
    REAL         shift, and go to state 20

    condicion_list  go to state 26
    condicion       go to state 22
    exp             go to state 23
    term            go to state 24
    factor          go to state 25


state 12

    7 asignacion_statement: TEXT IGUAL . exp

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    exp     go to state 27
    term    go to state 24
    factor  go to state 25


state 13

    0 $accept: program $end .

    $default  accept


state 14

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


state 15

   31 factor: MENOS . ENT
   33       | MENOS . REAL

    ENT   shift, and go to state 28
    REAL  shift, and go to state 29


state 16

   34 factor: LPAREN . exp RPAREN

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    exp     go to state 30
    term    go to state 24
    factor  go to state 25


state 17

   35 factor: COMILLA . TEXT COMILLA

    TEXT  shift, and go to state 31


state 18

   16 condicion_list: EXCLAMACION . condicion

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    condicion  go to state 32
    exp        go to state 23
    term       go to state 24
    factor     go to state 25


state 19

   30 factor: ENT .

    $default  reduce using rule 30 (factor)


state 20

   32 factor: REAL .

    $default  reduce using rule 32 (factor)


state 21

    8 si_statement: SI LPAREN condicion_list . RPAREN statement_list osi_list FIN
    9             | SI LPAREN condicion_list . RPAREN statement_list FIN
   14 condicion_list: condicion_list . DOBLEAMPERSAN condicion
   15               | condicion_list . DOBLEBARRA condicion

    RPAREN         shift, and go to state 33
    DOBLEAMPERSAN  shift, and go to state 34
    DOBLEBARRA     shift, and go to state 35


state 22

   17 condicion_list: condicion .

    $default  reduce using rule 17 (condicion_list)


state 23

   18 condicion: exp . MAYQUE exp
   19          | exp . MENQUE exp
   20          | exp . MAYQUE IGUAL exp
   21          | exp . MENQUE IGUAL exp
   22          | exp . IGUAL IGUAL exp
   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    CONCAT  shift, and go to state 38
    IGUAL   shift, and go to state 39
    MAYQUE  shift, and go to state 40
    MENQUE  shift, and go to state 41


state 24

   26 exp: term .
   27 term: term . POR factor
   28     | term . DIV factor

    POR  shift, and go to state 42
    DIV  shift, and go to state 43

    $default  reduce using rule 26 (exp)


state 25

   29 term: factor .

    $default  reduce using rule 29 (term)


state 26

   13 mientras_statement: MIENTRAS LPAREN condicion_list . RPAREN statement_list FIN
   14 condicion_list: condicion_list . DOBLEAMPERSAN condicion
   15               | condicion_list . DOBLEBARRA condicion

    RPAREN         shift, and go to state 44
    DOBLEAMPERSAN  shift, and go to state 34
    DOBLEBARRA     shift, and go to state 35


state 27

    7 asignacion_statement: TEXT IGUAL exp .
   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    CONCAT  shift, and go to state 38

    $default  reduce using rule 7 (asignacion_statement)


state 28

   31 factor: MENOS ENT .

    $default  reduce using rule 31 (factor)


state 29

   33 factor: MENOS REAL .

    $default  reduce using rule 33 (factor)


state 30

   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term
   34 factor: LPAREN exp . RPAREN

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    RPAREN  shift, and go to state 45
    CONCAT  shift, and go to state 38


state 31

   35 factor: COMILLA TEXT . COMILLA

    COMILLA  shift, and go to state 46


state 32

   16 condicion_list: EXCLAMACION condicion .

    $default  reduce using rule 16 (condicion_list)


state 33

    8 si_statement: SI LPAREN condicion_list RPAREN . statement_list osi_list FIN
    9             | SI LPAREN condicion_list RPAREN . statement_list FIN

    SI        shift, and go to state 1
    MIENTRAS  shift, and go to state 2
    TEXT      shift, and go to state 3

    statement_list        go to state 47
    statement             go to state 6
    asignacion_statement  go to state 7
    si_statement          go to state 8
    mientras_statement    go to state 9


state 34

   14 condicion_list: condicion_list DOBLEAMPERSAN . condicion

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    condicion  go to state 48
    exp        go to state 23
    term       go to state 24
    factor     go to state 25


state 35

   15 condicion_list: condicion_list DOBLEBARRA . condicion

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    condicion  go to state 49
    exp        go to state 23
    term       go to state 24
    factor     go to state 25


state 36

   23 exp: exp MAS . term

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    term    go to state 50
    factor  go to state 25


state 37

   24 exp: exp MENOS . term

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    term    go to state 51
    factor  go to state 25


state 38

   25 exp: exp CONCAT . term

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    term    go to state 52
    factor  go to state 25


state 39

   22 condicion: exp IGUAL . IGUAL exp

    IGUAL  shift, and go to state 53


state 40

   18 condicion: exp MAYQUE . exp
   20          | exp MAYQUE . IGUAL exp

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    IGUAL    shift, and go to state 54
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    exp     go to state 55
    term    go to state 24
    factor  go to state 25


state 41

   19 condicion: exp MENQUE . exp
   21          | exp MENQUE . IGUAL exp

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    IGUAL    shift, and go to state 56
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    exp     go to state 57
    term    go to state 24
    factor  go to state 25


state 42

   27 term: term POR . factor

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    factor  go to state 58


state 43

   28 term: term DIV . factor

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    factor  go to state 59


state 44

   13 mientras_statement: MIENTRAS LPAREN condicion_list RPAREN . statement_list FIN

    SI        shift, and go to state 1
    MIENTRAS  shift, and go to state 2
    TEXT      shift, and go to state 3

    statement_list        go to state 60
    statement             go to state 6
    asignacion_statement  go to state 7
    si_statement          go to state 8
    mientras_statement    go to state 9


state 45

   34 factor: LPAREN exp RPAREN .

    $default  reduce using rule 34 (factor)


state 46

   35 factor: COMILLA TEXT COMILLA .

    $default  reduce using rule 35 (factor)


state 47

    3 statement_list: statement_list . statement
    8 si_statement: SI LPAREN condicion_list RPAREN statement_list . osi_list FIN
    9             | SI LPAREN condicion_list RPAREN statement_list . FIN

    SI        shift, and go to state 1
    OSI       shift, and go to state 61
    MIENTRAS  shift, and go to state 2
    FIN       shift, and go to state 62
    TEXT      shift, and go to state 3

    statement             go to state 14
    asignacion_statement  go to state 7
    si_statement          go to state 8
    osi_list              go to state 63
    osi                   go to state 64
    mientras_statement    go to state 9


state 48

   14 condicion_list: condicion_list DOBLEAMPERSAN condicion .

    $default  reduce using rule 14 (condicion_list)


state 49

   15 condicion_list: condicion_list DOBLEBARRA condicion .

    $default  reduce using rule 15 (condicion_list)


state 50

   23 exp: exp MAS term .
   27 term: term . POR factor
   28     | term . DIV factor

    POR  shift, and go to state 42
    DIV  shift, and go to state 43

    $default  reduce using rule 23 (exp)


state 51

   24 exp: exp MENOS term .
   27 term: term . POR factor
   28     | term . DIV factor

    POR  shift, and go to state 42
    DIV  shift, and go to state 43

    $default  reduce using rule 24 (exp)


state 52

   25 exp: exp CONCAT term .
   27 term: term . POR factor
   28     | term . DIV factor

    POR  shift, and go to state 42
    DIV  shift, and go to state 43

    $default  reduce using rule 25 (exp)


state 53

   22 condicion: exp IGUAL IGUAL . exp

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    exp     go to state 65
    term    go to state 24
    factor  go to state 25


state 54

   20 condicion: exp MAYQUE IGUAL . exp

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    exp     go to state 66
    term    go to state 24
    factor  go to state 25


state 55

   18 condicion: exp MAYQUE exp .
   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    CONCAT  shift, and go to state 38

    $default  reduce using rule 18 (condicion)


state 56

   21 condicion: exp MENQUE IGUAL . exp

    MENOS    shift, and go to state 15
    LPAREN   shift, and go to state 16
    COMILLA  shift, and go to state 17
    ENT      shift, and go to state 19
    REAL     shift, and go to state 20

    exp     go to state 67
    term    go to state 24
    factor  go to state 25


state 57

   19 condicion: exp MENQUE exp .
   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    CONCAT  shift, and go to state 38

    $default  reduce using rule 19 (condicion)


state 58

   27 term: term POR factor .

    $default  reduce using rule 27 (term)


state 59

   28 term: term DIV factor .

    $default  reduce using rule 28 (term)


state 60

    3 statement_list: statement_list . statement
   13 mientras_statement: MIENTRAS LPAREN condicion_list RPAREN statement_list . FIN

    SI        shift, and go to state 1
    MIENTRAS  shift, and go to state 2
    FIN       shift, and go to state 68
    TEXT      shift, and go to state 3

    statement             go to state 14
    asignacion_statement  go to state 7
    si_statement          go to state 8
    mientras_statement    go to state 9


state 61

   12 osi: OSI . LPAREN condicion_list RPAREN statement_list

    LPAREN  shift, and go to state 69


state 62

    9 si_statement: SI LPAREN condicion_list RPAREN statement_list FIN .

    $default  reduce using rule 9 (si_statement)


state 63

    8 si_statement: SI LPAREN condicion_list RPAREN statement_list osi_list . FIN
   11 osi_list: osi_list . osi

    OSI  shift, and go to state 61
    FIN  shift, and go to state 70

    osi  go to state 71


state 64

   10 osi_list: osi .

    $default  reduce using rule 10 (osi_list)


state 65

   22 condicion: exp IGUAL IGUAL exp .
   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    CONCAT  shift, and go to state 38

    $default  reduce using rule 22 (condicion)


state 66

   20 condicion: exp MAYQUE IGUAL exp .
   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    CONCAT  shift, and go to state 38

    $default  reduce using rule 20 (condicion)


state 67

   21 condicion: exp MENQUE IGUAL exp .
   23 exp: exp . MAS term
   24    | exp . MENOS term
   25    | exp . CONCAT term

    MAS     shift, and go to state 36
    MENOS   shift, and go to state 37
    CONCAT  shift, and go to state 38

    $default  reduce using rule 21 (condicion)


state 68

   13 mientras_statement: MIENTRAS LPAREN condicion_list RPAREN statement_list FIN .

    $default  reduce using rule 13 (mientras_statement)


state 69

   12 osi: OSI LPAREN . condicion_list RPAREN statement_list

    MENOS        shift, and go to state 15
    LPAREN       shift, and go to state 16
    COMILLA      shift, and go to state 17
    EXCLAMACION  shift, and go to state 18
    ENT          shift, and go to state 19
    REAL         shift, and go to state 20

    condicion_list  go to state 72
    condicion       go to state 22
    exp             go to state 23
    term            go to state 24
    factor          go to state 25


state 70

    8 si_statement: SI LPAREN condicion_list RPAREN statement_list osi_list FIN .

    $default  reduce using rule 8 (si_statement)


state 71

   11 osi_list: osi_list osi .

    $default  reduce using rule 11 (osi_list)


state 72

   12 osi: OSI LPAREN condicion_list . RPAREN statement_list
   14 condicion_list: condicion_list . DOBLEAMPERSAN condicion
   15               | condicion_list . DOBLEBARRA condicion

    RPAREN         shift, and go to state 73
    DOBLEAMPERSAN  shift, and go to state 34
    DOBLEBARRA     shift, and go to state 35


state 73

   12 osi: OSI LPAREN condicion_list RPAREN . statement_list

    SI        shift, and go to state 1
    MIENTRAS  shift, and go to state 2
    TEXT      shift, and go to state 3

    statement_list        go to state 74
    statement             go to state 6
    asignacion_statement  go to state 7
    si_statement          go to state 8
    mientras_statement    go to state 9


state 74

    3 statement_list: statement_list . statement
   12 osi: OSI LPAREN condicion_list RPAREN statement_list .

    SI        shift, and go to state 1
    MIENTRAS  shift, and go to state 2
    TEXT      shift, and go to state 3

    $default  reduce using rule 12 (osi)

    statement             go to state 14
    asignacion_statement  go to state 7
    si_statement          go to state 8
    mientras_statement    go to state 9
